# gz-common

./: .gitignore  BUILD.bazel  CMakeLists.txt  Changelog.md  MODULE.bazel  Migration.md  README.md  bitbucket-pipelines.yml  codecov.yml  configure.bat  coverage.ignore.in  cppcheck.suppress.in  package.xml  tutorials.md.in
av/: BUILD.bazel
av/include/: CMakeLists.txt
av/include/gz/common/: AudioDecoder.hh  CMakeLists.txt  HWEncoder.hh  HWVideo.hh  Video.hh  VideoEncoder.hh  ffmpeg_inc.hh
av/include/ignition/common/: AudioDecoder.hh  CMakeLists.txt  HWEncoder.hh  HWVideo.hh  Video.hh  VideoEncoder.hh  av.hh  ffmpeg_inc.hh
av/src/: AudioDecoder.cc  AudioDecoder_TEST.cc  CMakeLists.txt  HWEncoder.cc  Util.cc  Video.cc  VideoEncoder.cc  VideoEncoder_TEST.cc  ffmpeg_inc.cc
events/: BUILD.bazel
events/include/: CMakeLists.txt
events/include/gz/common/: CMakeLists.txt  Event.hh  KeyEvent.hh  MouseEvent.hh
events/include/ignition/common/: CMakeLists.txt  Event.hh  KeyEvent.hh  MouseEvent.hh  events.hh
events/src/: CMakeLists.txt  Event.cc  Event_TEST.cc  KeyEvent.cc  KeyEvent_TEST.cc  MouseEvent.cc  MouseEvent_TEST.cc
examples/: CMakeLists.txt  README.md  assert_example.cc  console.cc  events.cc  exception_example.cc  logging_performance.cc  profiler.cc  util.cc
geospatial/: BUILD.bazel
geospatial/include/gz/common/: CMakeLists.txt
geospatial/src/: CMakeLists.txt  Dem.cc  Dem_TEST.cc  HeightmapLoader.cc  HeightmapLoader_TEST.cc  HeightmapUtil.cc  HeightmapUtil_TEST.cc  ImageHeightmap.cc  ImageHeightmap_TEST.cc
graphics/: BUILD.bazel
graphics/src/: Animation.cc  Animation_TEST.cc  AssimpLoader.cc  AssimpLoader_TEST.cc  BVHLoader.cc  BVHLoader_TEST.cc  CMakeLists.txt  ColladaExporter.cc  ColladaExporter_TEST.cc  ColladaLoader.cc  ColladaLoader_TEST.cc  DelaunayTriangulation.cc  DelaunayTriangulation_TEST.cc  Dem.cc  Dem_TEST.cc  GTSMeshUtils.cc  GTSMeshUtils_TEST.cc  Image.cc  ImageHeightmap.cc  ImageHeightmap_TEST.cc  ImageLoader.cc  ImageLoader.hh  ImageLoaderFreeImage.cc  ImageLoaderFreeImage.hh  ImageLoaderSTB.cc  ImageLoaderSTB.hh  ImageLoader_TEST.cc  Image_TEST.cc  KeyFrame.cc  Material.cc  Material_TEST.cc  Mesh.cc  MeshCSG.cc  MeshCSG_TEST.cc  MeshExporter.cc  MeshManager.cc  MeshManager_TEST.cc  Mesh_TEST.cc  NodeAnimation.cc  NodeTransform.cc  (+15 more)
graphics/src/CDT/: README.md
graphics/src/STB/: README
graphics/src/VHACD/: README.md  VHACD.h
graphics/src/tinyxml2/: BUILD.bazel  tinyxml2.cpp  tinyxml2.h
io/: BUILD.bazel
io/src/: CMakeLists.txt  CSVStreams.cc  CSVStreams_TEST.cc  DataFrame_TEST.cc
profiler/: BUILD.bazel  CMakeLists.txt
profiler/include/: CMakeLists.txt
profiler/src/: CMakeLists.txt  Profiler.cc  ProfilerImpl.hh  Profiler_Custom_TEST.cc  Profiler_Disabled_TEST.cc  Profiler_Error_TEST.cc  Profiler_Remotery_TEST.cc  Profiler_TEST.cc  RemoteryProfilerImpl.cc  RemoteryProfilerImpl.hh
profiler/src/Remotery/: BUILD.bazel  gz_remotery_vis.in  ign_remotery_vis.in  upstream-rev
src/: Animation.cc  Animation_TEST.cc  AudioDecoder.cc  AudioDecoder_TEST.cc  BVHLoader.cc  Base64.cc  Base64_TEST.cc  Battery.cc  Battery_TEST.cc  CMakeLists.txt  CSVFile.cc  CSVFile_TEST.cc  CSVStreams.cc  CSVStreams_TEST.cc  ColladaExporter.cc  ColladaExporter_TEST.cc  ColladaLoader.cc  ColladaLoader_TEST.cc  Color.cc  Color_TEST.cc  Console.cc  ConsoleNew.cc  ConsoleNew_TEST.cc  Console_TEST.cc  DataFrame_TEST.cc  Dem.cc  Dem_TEST.cc  DirIter.cc  EnumIface_TEST.cc  Event_TEST.cc  Exception.cc  Exception_TEST.cc  Filesystem.cc  FilesystemBoost.cc  FilesystemOSRF.cc  Filesystem_TEST.cc  FlagSet_TEST.cc  GTSMeshUtils.cc  Image.cc  ImageHeightmap.cc  (+74 more)
src/tinyxml2/: tinyxml2.cpp
src/tinyxml2/ignition/: tinyxml2.cpp  tinyxml2.h
test/: BUILD.bazel  CMakeLists.txt  test_config.h.in  test_util.hh  util.hh
test/benchmark/: CMakeLists.txt  ColladaLoader.cc  MeshManager.cc
test/data/: bad_version.dae  blender_pbr.mtl  box.fbx  box.glb  box_opaque.dae  box_texture.dae  box_texture_jpg.glb  box_transmission.glb  box_with_double_skeleton.dae  box_with_hierarchical_nodes.dae  box_with_no_animation_name.dae  cube_pbr.mtl  cylinder_animated_from_3ds_max.dae  dem_nodata_nan.nc  empty_init_from.dae  fully_featured.glb  malformed_normal_bad_count.dae  malformed_normal_no_count.dae  malformed_normal_no_stride.dae  malformed_p_negative_index.dae  malformed_polylist_short_p.dae  malformed_position_bad_count.dae  malformed_position_huge_count.dae  malformed_position_negative_count.dae  malformed_position_no_count.dae  malformed_position_no_stride.dae  malformed_position_overflow.dae  malformed_position_zero_stride.dae  malformed_texcoord_bad_count.dae  malformed_texcoord_mismatch.dae  malformed_texcoord_no_count.dae  malformed_texcoord_no_stride.dae  missing_visual_scene.dae  multiple_texture_coordinates_triangle.dae  multiple_texture_coordinates_triangle.glb  no_collada_tag.dae  rectangle.dae  xy_square_lines.dae  xy_triangle_texture.dae
test/data/gltf/: PurpleCube.gltf
test/integration/: CMakeLists.txt  console.cc  deprecated_TEST.cc  encoder_timing.cc  events_with_plugins.cc  mesh.cc  plugin.cc  skeleton.cc  video_encoder.cc
test/performance/: CMakeLists.txt  logging.cc  plugin_specialization.cc
test/plugins/: BadPluginAPIVersionNew.cc  BadPluginAPIVersionOld.cc  BadPluginAlign.cc  BadPluginSize.cc  CMakeLists.txt  DummyPlugins.cc  DummyPlugins.hh  EventEmitterPlugin.cc  EventEmitterPlugin.hh
test/regression/: CMakeLists.txt
test/static_assertions/: CMakeLists.txt  plugin_bad_const_assignment.cc  plugin_bad_const_construct.cc  plugin_class_repeated.cc  plugin_no_base_class.cc  plugin_not_fully_qualified_base.cc  plugin_not_fully_qualified_class.cc  plugin_not_global_ns.cc  plugin_wrong_base_class.cc  testrunner.bash
test/util/: CMakeLists.txt  DummyPlugins.cc  DummyPlugins.hh
testing/: BUILD.bazel
testing/src/: AutoLogFixture.cc  AutoLogFixture_TEST.cc  BazelTestPaths.cc  BazelTestPaths_TEST.cc  CMakeLists.txt  CMakeTestPaths.cc  CMakeTestPaths_TEST.cc  RedirectConsoleStream.cc  RedirectConsoleStream_TEST.cc  TestPaths.cc  Utils.cc  Utils_TEST.cc
(+310 files in other folders)
