## MODULE.bazel
module(
    name = "gz-common",
    repo_name = "org_gazebosim_gz-common",
)

bazel_dep(name = "buildifier_prebuilt", version = "6.1.2")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "rules_license", version = "0.0.8")

bazel_dep(name = "rules_gz")
bazel_dep(name = "gz-utils")
bazel_dep(name = "gz-math")

bazel_dep(name = "libuuid", version = "2.39.3.bcr.1")
