load("@rules_gazebo//gazebo:headers.bzl", "gz_export_header")
load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = ["//:license"],
    features = [
        "layering_check",
        "parse_headers",
    ],
)

public_headers_no_gen = glob([
    "include/gz/common/*.hh",
    "include/gz/common/**/*.hh",
])

sources = glob(
    ["src/*.cc"],
    exclude = ["src/*_TEST.cc"],
)

test_sources = glob(["src/*_TEST.cc"])

gz_export_header(
    name = "Export",
    out = "include/gz/common/geospatial/Export.hh",
    export_base = "GZ_COMMON_GEOSPATIAL",
    lib_name = "gz-common-geospatial",
)

public_headers = public_headers_no_gen + [
    "include/gz/common/geospatial/Export.hh",
]

# cc_library(
#     name = "geospatial",
#     srcs = sources,
#     hdrs = public_headers,
#     copts = [
#         "-Wno-unused-value",
#         "-fexceptions",
#     ],
#     includes = ["include"],
#     visibility = ["//visibility:public"],
#     deps = [
#         "//:gz-common",
#         "//graphics:gz-common-graphics",
#         "@gz-utils//:ImplPtr",
#         "@gdal",
#     ],
# )
#
# [cc_test(
#     name = src.replace("/", "_").replace(".cc", "").replace("src_", ""),
#     srcs = [src],
#     data = ["//test:data"],
#     env = {
#         "GZ_BAZEL": "1",
#     },
#     deps = [
#         ":gz-common-geospatial",
#         "//testing:gz-common-testing",
#         "@googletest//:gtest_main",
#     ],
# ) for src in test_sources]
